File Name: CHANGES

04/09/2014 FASP 1.4.9:
- Add block preconditioners for block_dCSRmat matrices

04/02/2014 FASP 1.4.8:
- Add ini/ua.dat and ini/sa.dat parameters.
- Clean up make/cmake files.
- Fix multiple doxygen problems.
- Update FASP website.
- Change names of the aggregation inclusion files.
- Prepare aggregation code for testing Notay's algorithm.
- Fix potential memory leakage in CSR to BSR conversions. 

03/31/2014 FASP 1.4.7:
- Fix a bug which makes regression results depend on the default parameters unwantedly. 
- Fix a coarsest level iterative method tolerance problem for AMG.
- Update regression test results.
- Test GCC4.8 on OS X Mavericks.
- Rewrite fasp_format_dcsr_dbsr routine.
- Change timing output in FAMG.
- Add MUMPS support to FASP.

03/19/2014 FASP 1.4.6:
- Change AMG setup output layout. 
- Clean up a few files for further optimization.
- Check diagonal preference branch for GS.
- Modify default parameters in input files. 
- Update FASP header files.
- Update VS10 solution settings.
- Update FASP webpage.

03/14/2014 FASP 1.4.5:
- Fix a return value inconsistent problem in interface_samg.c
- Fix a macro typo in amg_setup_sa.c 
- Use specified name of parameter instead of value in parameters.c
- Fix a relative directory problem in VS08.
- Fix file property problem for *.sh files.
- Fix number of iterations problem in regression.c.
- Update regression test results. 
- Update TODO list.

02/26/2014 FASP 1.4.4:
- Fix missing print information in Fortran wrapper.
- Fix a typo in test.c and test.f90.
- Add SuperLU to CMake.
- Fix an initial parameter problem for iterative solvers.

02/01/2014 FASP 1.4.3:
- Fix a bug introduced in the previous version.
- Fix wront regression test results caused by -ffast-math.
- Fix several un-used variable warnings.
- Fix a bug due to disk failures. 
- Remove DEBUG_MODE setting from fasp.h and add it to Makefile.
- Add version tag to the current version.
- Update webpage and developer list.
